heapuse-tests/tests/ui/fail-derive-wrong-attrs-3.stderr
error: unsupported heap attribute, maybe you mean `#[heap(add)]`?
 --> tests/ui/fail-derive-wrong-attrs-3.rs:6:5
  |
6 |     #[heap]
  |     ^^^^^^^
